Add endpoint to increase customer wallet balance
